[package]
name = "lv2_raw"
version = "0.2.0"
authors = ["poidl <hoitaus@gmail.com>"]
description = "Exposes the raw LV2 interface (C) to Rust. Also attempts to implement some idiomatic Rust concepts (e.g. iterators)."
documentation = "https://docs.rs/lv2_raw/0.2.0/lv2_raw/"
homepage = "https://github.com/poidl/lv2_raw"
repository = "https://github.com/poidl/lv2_raw"
readme = "README.md"
keywords = ["lv2", "audio", "plugin", "ffi"]
license = "ISC"
edition = "2021"                                                                                                                     # Add edition field
rust-version = "1.56"                                                                                                                # Specify minimum supported Rust version

[dependencies]
libc = "0.2"
