[package]
name = "lv2_raw"
version = "0.3.0"
authors = ["ragebreaker", "poidl <hoitaus@gmail.com>"]
description = "Exposes the raw LV2 interface (C) to Rust. Also attempts to implement some idiomatic Rust concepts (e.g. iterators)."
documentation = "https://docs.rs/lv2_raw/0.2.0/lv2_raw/"
homepage = "https://github.com/mlm-games/lv2_raw"
repository = "https://github.com/mlm-games/lv2_raw"
readme = "README.md"
keywords = ["lv2", "audio", "plugin", "ffi"]
license = "ISC OR MIT OR Apache-2.0"
edition = "2024"

[dependencies]
libc = "0.2"
